src/objects/Car_Enquiry__c.object
<CustomObject>
    <description>Case: this object is used for Car Enquiry in Case Object.</description>
    <fields>
        <fullName>Car_Brand__c</fullName>
        <formula>IF( Car_Model__c &lt;&gt;null, TEXT( Car_Model__r.Brand__c ), CASE(Car_Series__c, &quot;Smart&quot;, &quot;Smart&quot;, &quot;AMG&quot;, &quot;AMG&quot;, &quot;MB&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Car Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <label>Car Model</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Car Enquiry</relationshipLabel>
        <relationshipName>Car_Enquiry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Series__c</fullName>
        <label>Car Series</label>
        <picklist>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Car Enquiry</relationshipLabel>
        <relationshipName>Car_Enquiry</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Car Enquiry</label>
    <nameField>
        <displayFormat>CarEnq-{00000000}</displayFormat>
        <label>Car Enquiry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Enquiry</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>